Fix logo on mobile

--- a/resources/sass/header.scss
+++ b/resources/sass/header.scss
@@ -1,6 +1,8 @@
 img.c-header-brand {
-    max-height: 38px;
-    // width: 80px;
+    max-height: 30px;
+    max-width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 /*
 ol, ul {
